--- a/src/main/resources/com/example/qlchamcong/qlnshome/qlns-home.fxml
+++ b/src/main/resources/com/example/qlchamcong/qlnshome/qlns-home.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.qlchamcong.qlnshome.QLNSHomeViewManager">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.qlchamcong.qlnshome.QLNSHomeViewManager">
    <children>
-      <Label layoutX="269.0" layoutY="191.0" text="Home Page" />
+      <Label fx:id="homePageText" layoutX="262.0" layoutY="186.0" prefHeight="28.0" prefWidth="76.0" text="Home Page" />
+      <Button fx:id="suaBGCC" layoutX="276.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleSuaBGCCAction" text="Sua" />
    </children>
 </AnchorPane>
